Fixed word-spacing

--- a/style.css
+++ b/style.css
@@ -135,6 +135,7 @@ div.img-box {
     margin-bottom: 0;
     margin-top: 3rem;
     width: fit-content;
+    word-spacing: 2px;
   }
   
   p {
